--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>telegrambotsextensions</artifactId>
             <version>6.9.7.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.17.2</version>
+            </dependency>
     </dependencies>
 
 </project>
